# platform-crowd-model

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  vce-alight-only-fine-rate.py  vce-one-train.py  vce-two-trains-alight-and-board.py  vce_two_trains_alight_and_board.py
.github/workflows/: ci.yml
vce/: penn_station_platforms_20221109.xlsx  platform_A_egress.xlsx  platform_E_egress.xlsx  vce.py
vce-alightonly-finerate/: penn_station_platforms_20221109.xlsx  plat_c.xlsx  vce-alightonly-finerate.py
vce-indiv/: platform_F_twoway.xlsx  vce-indiv.py
vce-onetrain/: penn_station_platforms_20221109.xlsx  platform_B_egress.xlsx  platform_C_egress.xlsx  platform_D_egress.xlsx  platform_F_egress.xlsx  vce.py
vce-outputonly/: vce-outputonly.py
vce-twotrains-alightandboard/: .gitignore  default.nix  platform_A_twotrains_twoway.xlsx  platform_F_twotrains_twoway.xlsx  platform_F_twotrains_twoway_new.xlsx  shell.nix  vce-twotrains-alightandboard.py
vce-twoway/: platform_F_twoway.xlsx  vce-twoway.py
